--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body class="home-template">
 
     
-<header class="main-header " style="background-image: url(types-738846.jpg)">
+<header class="main-header " style="background-image: url(images/types-738846.jpg)">
     <nav class="main-nav overlay clearfix">
-        <a class="blog-logo" href="https://mikaman.github.io"><img src="blog_logo.png " alt="Blog Logo" /></a>
+        <a class="blog-logo" href="https://mikaman.github.io"><img src="images/blog_logo.png" alt="Blog Logo" /></a>
         <!-- <a class="subscribe-button icon-feed" href="https://mikaman.github.io/rss/">Subscribe</a> -->
     </nav>
     <div class="vertical">
