Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="home-template">
 
     
-<header class="main-header " style="background-image: url(images/types-738846.jpg)">
+<header class="main-header no-cover">
     <nav class="main-nav overlay clearfix">
         
         <!-- <a class="subscribe-button icon-feed" href="https://mikaman.github.io/rss/">Subscribe</a> -->
